syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";
import "Qot_Common.proto";

message QotGetBasicQotRequest
{
	repeated Security securityList = 1; //股票
}

message QotGetBasicQotResponse
{
	repeated BasicQot basicQotList = 1; //股票基本行情
}

message QotGetBasicQotRequest_Internal
{
	required QotGetBasicQotRequest payload = 1;
}

message QotGetBasicQotResponse_Internal
{
	required int32 retType = 1 [default = -400]; //RetType,返回结果
	optional string retMsg = 2;
	optional int32 errCode = 3;

	optional QotGetBasicQotResponse payload = 4;
}
